--- a/hr_timesheet_sheet_activity/views/mail_activity.xml
+++ b/hr_timesheet_sheet_activity/views/mail_activity.xml
@@ -12,7 +12,7 @@
         <field name="name">Activity Types</field>
         <field name="res_model">mail.activity.type</field>
         <field name="view_mode">tree,form</field>
-        <field name="domain">[('res_model_id.model', '=', 'hr_timesheet.sheet')]</field>
+        <field name="domain">[('res_model', '=', 'hr_timesheet.sheet')]</field>
         <field name="context">{'default_res_model': 'hr_timesheet.sheet'}</field>
     </record>
 
